2006-06-03  Martin Mares  <mj@ucw.cz>

	* lspci.c: Introduced the -nn switch. Thanks to David N. Welton
	for the idea.

	* lib/names.c (pci_lookup_name): Introduced PCI_LOOKUP_MIXED and
	cleaned up the name selection code.

	* lib/names.c (pci_lookup_name): If PCI_LOOKUP_NO_NUMBERS is given,
	pci_access->numeric_ids is ignored.

	* lib/names.c (pci_lookup_name): When class is identified and
	subclass isn't, display class name and subclass number.

2006-05-31  Martin Mares  <mj@ucw.cz>

	* setpci.c (main): Don't crash when an invalid width is specified.

	* lspci.c, setpci.c, common.c: die() now uses the right program
	name when printing an error message.

2006-05-19  Martin Mares  <mj@ucw.cz>

	* README: Mention the public GIT tree.

	* README: Updated the list of ports.

2006-05-10  Martin Mares  <mj@ucw.cz>

	* lib/configure, lib/fbsd-device.c: Added support for GNU/kFreeBSD.
	Thanks to Petr Salinger for the patch.

2006-05-05  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.3.

	* lspci.c (scan_device): The -D switch didn't work as intended
	in -m mode.

2006-05-05  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.2.

	* pci.ids: Updated to the current database snapshot.

	* lib/obsd-device.c (and other files in lib/*): Added OpenBSD
	interface by Matthieu Herrb <matthieu.herrb@laas.fr>, based on
	the existing FreeBSD interface.

	* Moved pciutils to a GIT repository, which now contains merged
	history from both CVS and Arch. Good bye, TLA!

2006-03-21  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_slot_name): Avoid the previous changes in default
	display of domain name when in machine-readable mode. However, `-D'
	forces domain display even there.

	* lspci.man: Added a warning on -m being the only format, which is
	guaranteed to be stable between lspci versions.

2006-03-13  Martin Mares  <mj@ucw.cz>

	* lspci.man: Documented the -D switch.

	* lspci.c (show_slot_name, scan_device): If there are multiple PCI