@@ -163,18 +163,14 @@ static void sysfs_scan(struct pci_access *a)
 	{
 	  sysfs_get_resources(d);
 	  d->irq = sysfs_get_value(d, "irq");
-	  d->known_fields = PCI_FILL_IRQ | PCI_FILL_BASES | PCI_FILL_ROM_BASE | PCI_FILL_SIZES;
-#if 0
 	  /*
-	   *  We prefer reading these from the config registers, it's faster.
-	   *  However, it would be possible and maybe even useful to hack the kernel
-	   *  to believe that some device has a different ID. If you do it, just
-	   *  enable this piece of code.  --mj
+	   *  We could read these faster from the config registers, but we want to give
+	   *  the kernel a chance to fix up ID's and especially classes of broken devices.
 	   */
 	  d->vendor_id = sysfs_get_value(d, "vendor");
 	  d->device_id = sysfs_get_value(d, "device");
-	  d->known_fields |= PCI_FILL_IDENT;
-#endif
+	  d->device_class = sysfs_get_value(d, "class") >> 8;
+	  d->known_fields = PCI_FILL_IDENT | PCI_FILL_CLASS | PCI_FILL_IRQ | PCI_FILL_BASES | PCI_FILL_ROM_BASE | PCI_FILL_SIZES;
 	}
       pci_link_dev(a, d);
     }
